Revision history for DBIx::Simple::Class
0.98    2012-09-02 16:34:59 EEST
        Created DBIx::Simple::Class::Schema.

0.70    2012-08-26 00:20:50 EEST
        - Increased version because of PAUSE
        "Status: Decreasing version number"
        -- hidden more example classes from PAUSE

0.69.1  2012-08-25 23:31:52 EEST
        - Cleanup.
        - Fixed MANIFEST

0.69    2012-08-25 19:48:44 EEST
        - This is a major release.
        - Improved DESCRIPTION in pod.
        - Added examples. See examples/lib/My
        - Test Coverage:
        file      stmt  bran  cond  sub   pod   time  total
        Class.pm  97.9  94.1  70.9  100.0 100.0 90.7  94.4
        - Moved database agnostic tests to 00-common.t
        - Addedd is_base_class for detecting direct inheritance
        from DBIx::Simple::Class.
        - Improved query(). Can be used by base class for directly
        calling $class->dbix->query().
        My::BaseClass->query(...) == $dbix->query(...)
        - Improved debug and error messages.
        - Rearanged BUILD()

0.68    2012-08-18 23:16:49 EEST
        - Added MIN_PERL_VERSION to Makefile.PL

0.67    2012-08-18 14:38:56 EEST
        - Added/improved comments to all default constants/class properties.
        - $UNQUOTED and $QUOTE_IDENTIFIERS are state variables now too.
        - Using //= for $UNQUOTED.
        - Slight optimisations.
        - Using Temporary tables for tests so no garbage is left
        in mysq test database if some test dies.

0.66    2012-08-18 05:57:54 EEST
        - Localised Params::Check variables as recommended in docs.
        - use 5.10.1 to use the smart match operator.
        - No List::Util needed any more.
        - Removed -T flag from all test files.


0.65    2012-08-18 03:50:55 EEST
        - Fixed mysql tests:
        You tried to plan twice at t/02-dbix-simple-class-mysql.t line 11.

0.64    2012-08-17 02:02 EEST
        - Suppressed some warnings from DBIx::Simple::Class during tests.