@@ -1,6 +1,8 @@
 Revision history for DBIx::Simple::Class
 0.98    2012-09-02 16:34:59 EEST
         Created DBIx::Simple::Class::Schema.
+        Implemented load_schema().
+        Implemented dump_schema_at().
 
 0.70    2012-08-26 00:20:50 EEST
         - Increased version because of PAUSE
